# lz4

./: .gitignore  CMakeLists.txt
lib/: lz4.c  utf8Util.c  utf8Util.h
programs/: bench.c  lz4cli.c  lz4io.c
